debian13/debian13.envoy-1.38.1/envoy-docker.yaml
node:
  id: tenant-0::node-1
  cluster: demo-cluster
  metadata:
    tenant_id: tenant-0
    listeners_outside: server://127.0.0.1:10000,    admin://127.0.0.1:19901,    plane://127.0.0.1:18230,      grpc://127.0.0.1:18100
    listeners_inside:  server://envoy-1.38.1:10000, admin://envoy-1.38.1:9901,  plane://xds-envoy-plane:8000, grpc://xds-envoy-plane:18100

  locality:
    region: us-west
    zone: us-west-1a
    sub_zone: rack-a

admin:
  # access_log_path: "/dev/stdout"
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /tmp/admin_access.log
        log_format:
          text_format: "[%START_TIME%] %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %RESPONSE_CODE% %RESPONSE_FLAGS%\n"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 1073741824 # e.g., 1GB

    - name: envoy.resource_monitors.global_downstream_max_connections
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 50000

stats_config:
  stats_matcher:
    inclusion_list:
      patterns:
        - prefix: "cluster."
        - prefix: "http."
        - prefix: "listener."
        - prefix: "server."

static_resources:
  listeners:
    - name: bootstrap_listener
      enable_reuse_port: false
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000

      filter_chains:
        # - filter_chain_match:
        #    transport_protocol: tls
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: "/etc/envoy/certs/server.crt"
                  private_key:
                    filename: "/etc/envoy/certs/server.key"
                alpn_protocols:
                  - h2
                  - http/1.1
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bootstrap

                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format: |
                          [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% TX:%BYTES_SENT% RX:%BYTES_RECEIVED% %DURATION%ms "%REQ(X-FORWARDED-FOR)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"

                route_config:
                  name: bootstrap_route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match:
                            path: "/favicon.ico"
                          direct_response:
                            status: 200
                            body:
                              inline_bytes: "iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAKBUlEQVR4nO2cfYxcVRnGnzM7n/u9FKkEpJNI4x8SdkRDVGI6aLEBTdqqMVEoncVEE2PS8Q9AJHVnVT6CadqNBhKbuLsRg0SxJTQ0SoWlKSYo0F0RNSDp1pgCxTr7NbMzO7NzfM7dmXa7nW3vvTP3c/eXnu773unuvPd9znnPx52tgIuZCf5wkxQyLiXiEpUEL3WzAQJx8Bp8gGBzBdnuTHdLXmySspKUQBISCV72PY4KoCU9J7ZWUEmvloQvxxEBpsMDWyuVSgrANrZVja0CTIcGdrK3Z9jb41hDQ7BZzlriV0awWUY2mEkKIfcy8Qm6a9TBEgHU5BrIyb1cPqawxkVpugDZcGabqMghmt1sa1yCpgowFepXvT5Ncw2dNEWAbDQTFwvywFqtN07DAmRDmYS [...]
                          response_headers_to_add:
                            - header:
                                key: content-type
                                value: image/x-icon
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: |
                                <!DOCTYPE html>
                                <html>
                                <head>
                                  <meta charset="utf-8"/>
                                  <title>xDS Control plane</title>
                                </head>
                                  <body style="font-family: sans-serif; text-align: center; padding-top: 50px;">
                                    <h1>Waiting for xDS...</h1>
                                    <p>Control plane not ready yet.</p>
                                  </body>
                                </html>
                          response_headers_to_add:
                            - header:
                                key: content-type
                                value: text/html; charset=UTF-8
                              append_action: OVERWRITE_IF_EXISTS_OR_ADD
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

        # - filter_chain_match:
        #     transport_protocol: raw_buffer
        #   filters:
        #     - name: envoy.filters.network.http_connection_manager
        #       typed_config:
        #         "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        #         stat_prefix: bootstrap

        #         access_log:
        #           - name: envoy.access_loggers.stdout
        #             typed_config:
        #               "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
        #               log_format:
        #                 text_format: |
        #                   [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% TX:%BYTES_SENT% RX:%BYTES_RECEIVED% %DURATION%ms "%REQ(X-FORWARDED-FOR)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"

        #         route_config:
        #           name: bootstrap_route
        #           virtual_hosts:
        #             - name: default
        #               domains: ["*"]
        #               routes:
        #                 - match:
        #                     path: "/favicon.ico"
        #                   direct_response:
        #                     status: 200
        #                     body:
        #                       inline_bytes: "iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAKBUlEQVR4nO2cfYxcVRnGnzM7n/u9FKkEpJNI4x8SdkRDVGI6aLEBTdqqMVEoncVEE2PS8Q9AJHVnVT6CadqNBhKbuLsRg0SxJTQ0SoWlKSYo0F0RNSDp1pgCxTr7NbMzO7NzfM7dmXa7nW3vvTP3c/eXnu773unuvPd9znnPx52tgIuZCf5wkxQyLiXiEpUEL3WzAQJx8Bp8gGBzBdnuTHdLXmySspKUQBISCV72PY4KoCU9J7ZWUEmvloQvxxEBpsMDWyuVSgrANrZVja0CTIcGdrK3Z9jb41hDQ7BZzlriV0awWUY2mEkKIfcy8Qm6a9TBEgHU5BrIyb1cPqawxkVpugDZcGabqMghmt1sa1yCpgowFepXvT5Ncw2dNEWAbDQTFwvywFqtN07DAmRDm [...]
        #                   response_headers_to_add:
        #                     - header:
        #                         key: content-type
        #                         value: image/x-icon
        #                 - match:
        #                     prefix: "/"
        #                   direct_response:
        #                     status: 200
        #                     body:
        #                       inline_string: |
        #                         <!DOCTYPE html>
        #                         <html>
        #                         <head>
        #                           <meta charset="utf-8"/>
        #                           <title>xDS Control plane</title>
        #                         </head>
        #                           <body style="font-family: sans-serif; text-align: center; padding-top: 50px;">
        #                             <h1>Waiting for xDS...</h1>
        #                             <p>Control plane not ready yet.</p>
        #                           </body>
        #                         </html>
        #                   response_headers_to_add:
        #                     - header:
        #                         key: content-type
        #                         value: text/html; charset=UTF-8
        #                       append_action: OVERWRITE_IF_EXISTS_OR_ADD
        #         http_filters:
        #           - name: envoy.filters.http.router
        #             typed_config:
        #               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: xds_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      http2_protocol_options: {}
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: host.docker.internal
                      address: xds-envoy-plane
                      port_value: 18100
                metadata:
                  filter_metadata:
                    edpt.envoy.lb:
                      protocol: grpc

dynamic_resources:
  ads_config:
    # api_type: GRPC
    api_type: DELTA_GRPC
    # transport_api_version: V3
    grpc_services:
      - envoy_grpc:
          cluster_name: xds_cluster

  lds_config:
    ads: {}
  cds_config:
    ads: {}
